change waitlist to subscribe

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										</ul>
 									</div>
 									<div class="header-btn d-none d-lg-block">
-										<a class="btn-border" target=”_blank” href="https://forms.gle/Sn7qHn8rPYy48nT6A">Join the waitlist</a>
+										<a class="btn-border" target=”_blank” href="https://forms.gle/Sn7qHn8rPYy48nT6A">Be an early subscriber</a>
 									</div>
 								</nav>
 							</div>
@@ -84,7 +84,7 @@
 									<h1 class="wow fadeInUp" data-wow-delay="0.2s">Revitalize Your Health Today.</h1>
 									<p class="wow fadeInUp" data-wow-delay="0.4s">Discover the ultimate solution to improve your health and well-being with DiaHype.</p>
 									<div class="slider3-button wow fadeInUp" data-wow-delay="0.6s">
-										<a class="btn active" target=”_blank”  href="https://forms.gle/Sn7qHn8rPYy48nT6A">Join the waitlist</a>
+										<a class="btn active" target=”_blank”  href="https://forms.gle/Sn7qHn8rPYy48nT6A">Be an early subscriber</a>
 										<!-- <a class="btn" href="#">PURCHASE</a> -->
 									</div>
 								</div>
