update website content

--- a/index.html
+++ b/index.html
@@ -167,17 +167,19 @@
 							<div class="features-wrapper mb-65 wow fadeInRight" data-wow-delay="0.2s">
 								<div class="features-text pl-30 pr-20">
 									
-									<h4>DiaHype is a leading international health company based in Port Harcourt, Nigeria. With a dedicated team of experts in Nigeria,
-										 UK and USA, we strive to provide innovative solutions and services to promote a healthier lifestyle. </h4>
+									<h4>
+										DiaHype is a leading international health initiative with a dedicated team of experts
+										 in Nigeria, UK and USA. We strive to provide innovative solutions and services to 
+										 promote a healthier lifestyle and manage cardiovascular risk factors.</h4>
 										 <br>
-										 <h4>Our mission is to empower 
-										 individuals to take control of their health and well-being through our comprehensive range of products and services. 
+										 <h4>
+											Our mission is to empower individuals to take control of their health and well-being through our comprehensive range of products and services.
 										</h4>
 										<br>
 										<h4>
-										 Our flagship 
-										 health interventions focus on prevention, early diagnosis and management of risk factors of Cardiovascular Diseases, especially 
-										 Hypertension, Diabetes and Chronic Kidney Disease.
+										  
+										 We focus on prevention, early diagnosis and management of risk factors of Cardiovascular Diseases, especially Hypertension, Diabetes and Chronic Kidney Disease. We also bring solutions to the unspoken challenges of Menopause (especially vaginal dryness, loss of libido, etc.) 
+										 and erectile dysfunction - a risk factor of cardiovascular disease.
 									</h4>
 								</div>
 							</div>
