added image update

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 			<div id="features" class="our-features-area pt-100 pb-75">
 				<div class="container">
 					<div class="row">
-						<div class="col-xl-6 col-lg-6">
+						<div class="col-xl-4 col-lg-8">
 							<br>
-							<div class="our-features-img mb-30">
-								<img src="img/phone.png" width="600" height="700" alt="" />
+							<div  class="download-img">
+								<img src="img/newimage.png" width="400" height="800" alt="" />
 							</div>
 						</div>
-						<div class="col-xl-6 col-lg-6">
+						<div class="col-xl-8 col-lg-2">
 							<div class="our-features-wrapper">
 								<div class="our-features-section">
 									<span>About DiaHype</span>
@@ -116,9 +116,23 @@
 										<h1>01</h1>
 									</div>
 									<div class="our-features-text">
-										<h3>Health Education Programs</h3>
-										<p>We offer a range of health education programs tailored to meet your needs. Our programs cover topics such as nutrition, 
-											exercise, stress management, and disease prevention. Let us help you improve your health and well-being.</p>
+										<h3>Health Improvement Programmes</h3>
+										<p>We offer a range of wellbeing activities tailored to meet your needs. Our programmes include evidence-based knowledge series on:</p>
+										<br>
+										<ul>
+											<li>* Diet</li>
+											<li>* Physical Activity</li>
+											<li>* Sleep</li>
+											<li>* Social Networks</li>
+											<li>* Weight Management</li>
+											<li>* Alcohol</li>
+											<li>* Smoking</li>
+											<li>* Happiness</li>
+											<li>* Helping Others</li>
+											<li>* Enjoying work</li>
+										  </ul>
+										  <br>
+										  <p>In addition, we will help you learn to overcome barriers to healthy living; develop skills and increase confidence in practising wellbeing activities.</p>
 									</div>
 								</div>
 								<div class="our-features-content mb-65">
@@ -127,7 +141,15 @@
 									</div>
 									<div class="our-features-text">
 										<h3>Consultation and Diagnosis</h3>
-										<p>Expert advice and accurate diagnosis by our experienced healthcare professionals.</p>
+										<p>Expert advice and accurate diagnosis by our experienced healthcare professionals on common cardiovascular conditions:</p>
+										<br>
+										<ul>
+											<li>* Hypertension</li>
+											<li>* Diabetes</li>
+											<li>* Chronic Kidney Disease</li>
+										  </ul>
+										  <br>
+										  <p>In addition, our experts help people with Menopausal symptoms and Erectile Dysfunction.</p>
 									</div>
 								</div>
 								<div class="our-features-content">
@@ -244,7 +266,7 @@
 							<div class="download-wrapper mt-120">
 								<div class="download-text download2-text">
 									<h1>Download coming soon</h1>
-									<p>Available on Google Play and apple store soonest .</p>
+									<p>Available on Google Play and Apple store soonest .</p>
 									<div class="download-button download2-button">
 										<a class="google active" href="#"><i class="fab fa-android"></i>Google Play</a>
 										<a href="#"><i class="fab fa-apple"></i> App Store</a>
